--- a/app/sass/main.scss
+++ b/app/sass/main.scss
@@ -1,4 +1,14 @@
+body {
+	margin: 0;
+	display: flex;
+	flex-direction: column;
+}
 
+
+.container-map {
+    display: flex;
+    flex: 1;
+}
 
 .carousel-control-next {
 	background-image: url('../img/arrow_next.png');
@@ -48,4 +58,62 @@
 #map {
   width: 100%;
   height: 600px;
+}
+
+
+//Menu filter
+
+.content {
+	padding: 2rem;
+	color: darkslategrey;
+	font-size: 2rem;
+	width: 60vw;
+	margin: 2rem auto;
+}
+
+#nav-filter {
+	width: 10vw;
+  background-color: coral;
+}
+
+#nav-filter.visible {
+	height: 100vh;
+	width: 40vw;
+}
+
+
+
+
+
+//
+
+/* equal card height */
+.row-equal > div[class*='col-'] {
+	display: flex;
+	flex: 1 0 auto;
+}
+
+.row-equal .card {
+	width: 100%;
+}
+
+/* ensure equal card height inside carousel */
+.carousel-inner>.row-equal.active,
+.carousel-inner>.row-equal.next,
+.carousel-inner>.row-equal.prev {
+	display: flex;
+}
+
+/* prevent flicker during transition */
+.carousel-inner>.row-equal.active.left,
+.carousel-inner>.row-equal.active.right {
+	opacity: 0.5;
+	display: flex;
+}
+
+
+/* control image height */
+.card-img-top-250 {
+	max-height: 250px;
+	overflow:hidden;
 }
