--- a/app/sass/main.scss
+++ b/app/sass/main.scss
@@ -78,7 +78,6 @@ body {
 }
 
 #nav-filter.visible {
-	//height: 100vh;
 	width: 40vw;
 }
 
@@ -103,6 +102,10 @@ body {
 	margin-bottom: 1em;
 }
 
+//Zoom - Dezoom map
+.leaflet-touch .leaflet-control-layers, .leaflet-touch .leaflet-bar {
+	border:none;
+}
 /* equal card height */
 .row-equal > div[class*='col-'] {
 	display: flex;
